path sum II and Add two numbers.